# MIPT_Algo

./: README.md  main.cpp  scanline.cpp
Aho_Corasik/: README.md  main.cpp
ConvexHull/: convex_hull.cpp
ConvexHull3D/: main.cpp
ManakerPalindromes/: main.cpp
MinkowskiAddition/: main.cpp
Palinodrome/: README.md
RetroAnalysis/: main.cpp
Scanline/: README.md  scanline.cpp
SegIntersection/: main.cpp
SpragueGrundy/: main.cpp
VoronoiDiagramm/: main.cpp
WAVCompressor/: CMakeLists.txt  FFT.cpp  FFT.hpp  README.md  WAVCompressor.cpp  WAVCompressor.hpp  main.cpp
ZFunction/: README.md
